[package]
name = "addgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core_affinity = "0.8.1"
crossbeam = "0.8.3"
hex = "0.4.3"
num_cpus = "1.16.0"
rand = "0.8.5"
secp256k1 = "0.28.0"
sha3 = "0.10.8"
